added new function ds.delta
Signed-off-by: tombisho <trpb2@cantab.net>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ds.changeRefGroup)
 export(ds.class)
 export(ds.colnames)
 export(ds.dataframe)
+export(ds.delta)
 export(ds.dim)
 export(ds.exists)
 export(ds.exp)
