Tests are now based on DSLite, dsBase is a suggested package (for the tests)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,10 @@ Depends:
     DSI
 Imports:
     stats
-Suggests: knitr
+Suggests: 
+    knitr,
+    DSLite,
+    dsBase
 License: GPL-3
 URL: http://datashield.ac.uk
 BugReports: https://github.com/datashield/dsBaseClient
